= Milestone 1.0b2 =
* Fixed problem with file protocol and spaces.
* Support for IVY (player can be published as artefact.


= Milestone 1.0b1 =
* QTI files can be loaded from other domains (requires security settings)
* Added support for video and audio files

= Milestone 0.3 =
* New styles for choice to mark correct and wrong answers
* Added styles to mark correct and wrong answers in text interaction (gap and choice)
* New navigation buttons
* Implemented choice feedbacks