@@ -8,11 +8,11 @@
 <testPart>
   <assessmentSection identifier="sectionA" title="Section A" visible="true">
   	<assessmentItemRef identifier="feedback" href="test/feedback.xml"/>
-  	<assessmentItemRef identifier="choice" href="test/choice.xml"/>
+  	<!-- assessmentItemRef identifier="choice" href="test/choice.xml"/>
   	<assessmentItemRef identifier="choice_multiple" href="test/choice_multiple.xml"/>
   	<assessmentItemRef identifier="inline choice" href="test/inline_choice.xml"/>
   	<assessmentItemRef identifier="text_entry" href="test/text_entry.xml"/>
-  	<assessmentItemRef identifier="movie" href="test/movie.xml"/>
+  	<assessmentItemRef identifier="movie" href="test/movie.xml"/-->
   	<!-- assessmentItemRef identifier="audio" href="test/audio.xml"/ -->
 	</assessmentSection>
 </testPart>
